# astrai-router

./: .gitignore  LICENSE  README.md  pyproject.toml
astrai_router/: __init__.py  advanced.py  arbitrage.py  cache.py  catalog.py  classifier.py  compression.py  energy.py  engine.py  execution.py  intelligence.py  learning.py  models.py  production.py  quality.py  shadow.py  smart_classify.py  storage.py  telemetry.py  unified.py  validation.py
examples/: basic_routing.py  fastapi_server.py  with_fallback_chains.py
tests/: test_advanced.py  test_classifier.py  test_compression.py  test_engine.py  test_intelligence.py
training/: train_router.py  train_unified.py
