[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrai-router"
version = "0.1.0"
description = "Open-source intelligent LLM router with Thompson Sampling, ARBITRAGE, and energy-aware routing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Astrai" }]
keywords = ["llm", "routing", "ai", "thompson-sampling", "arbitrage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "numpy>=1.26", "joblib>=1.3"]
litellm = ["litellm>=1.40"]
postgres = ["psycopg2-binary>=2.9"]
all = ["astrai-router[ml,litellm,postgres]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/astrai-ai/astrai-router"
Documentation = "https://github.com/astrai-ai/astrai-router#readme"
Repository = "https://github.com/astrai-ai/astrai-router"
Issues = "https://github.com/astrai-ai/astrai-router/issues"

[tool.setuptools.packages.find]
include = ["astrai_router*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
